# ColorReliefEditor

./: .gitignore  README.md  colorReliefEditor.py  deploy.sh  py_deploy.sh  pyproject.toml  requirements.txt  setup.py
ColorReliefEditor/: ColorReliefEdit.py  app_settings_page.py  color_page.py  contour_page.py  elevation_page.py  file_drop_widget.py  hillshade_page.py  instructions.py  make_process.py  misc_page.py  preview_widget.py  project_config.py  project_page.py  relief_page.py  settings_page.py  tab_page.py
ColorReliefEditor/resources/: Create.html  Hillshade.html  Project.html  default_relief.cfg
docs/: color_relief.rst  readme.md
docs/_build/html/: ColorReliefEdit.html  app_settings_page.html  color_config.html  color_page.html  color_relief.html  elevation_page.html  file_drop_widget.html  genindex.html  hillshade_page.html  index.html  instructions.html  make_process.html  misc_page.html  modules.html  objects.inv  preview_widget.html  project_config.html  project_page.html  py-modindex.html  recent_files.html  relief_page.html  search.html  searchindex.js  tab_page.html
docs/source/: color_relief.rst  conf.py  hillshade_tab.rst  index.rst  make_process.rst  modules.rst  preference_tab.rst  preview_widget.rst  project_tab.rst  recent_files.rst
scripts/: color_relief copy.sh  color_relief.sh  create_precip_rgb.sh  merge_arid.sh  set_extent.sh
tests/: test_color_ramp.py  test_interpolate.py
