# Note - setup.py will install color_relief.sh script from the scripts directory

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ColorReliefEditor"
version = "0.1.23"
description = "Creates hillshade images and color relief images from Digital Elevation Files using GDAL"
authors = [{ name = "corb" }]
readme = "docs/readme.md"
requires-python = ">=3.8"
dependencies = [
    "PyQt6>=6.6.1",
    "appdirs~=1.4.4",
    "YMLEditor>=0.1.14",
]
keywords = ["GDAL", "GIS", "editor","DEM", "Elevation"]
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
]

[project.scripts]
# Allow app to be directly launched
ColorReliefEditor = "ColorReliefEditor.ColorReliefEdit:main"

[tool.setuptools]
# include the ColorReliefEditor directory as a package in the distribution.
packages = ["ColorReliefEditor"]

[tool.setuptools.package-dir]
# The ColorReliefEditor package is located in the root of the project
# directory (i.e., not inside a src/ or lib/ directory)
"" = "."

[project.urls]
Repository = "https://github.com/corb555/ColorReliefEditor"

[tool.setuptools.package-data]
# Include all resources files in resources directory
# To access from python:
#    import importlib.resources as pkg_resources
#    from . import resources
#    with pkg_resources.open_text(resources, filename) as f:
#       resource_data = f.read()
ColorReliefEditor = ["resources/*"]
